centered game and placeholders

--- a/index.html
+++ b/index.html
@@ -2,15 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="author" content="D&amp;R universal solutions">
-    <title>phaser3-typescript</title>
+    <meta name="author" content="Disappointing Games">
+    <title>Keep IT Alive!</title>
     <link rel="stylesheet" type="text/css" href="styles/css/styles.css">
     <script src="build/bundle.js"></script>
-	<script> window.onload = function () { window.focus(); } window.onclick = function () { window.focus(); } </script>
+	<script> window.onload = function () { window.focus(); }; window.onclick = function () { window.focus(); } </script>
   </head>
-  <body>
+  <body style="
+    width: 1024px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 0; 
+    padding-right: 0; ">
     <div class="container">
-      <h1>??? - LD46</h1>      
+      <h1>Keep IT Alive - a LD46 jam game</h1>      
       <div id="game"></div>
     </div>
   </body>
